--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "npx webpack",
-    "test": "jest"
+    "test": "jest --watch"
   },
   "repository": {
     "type": "git",
