--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "npx webpack",
+    "start": "npx webpack serve",
     "test": "jest --watch"
   },
   "repository": {
@@ -27,6 +27,7 @@
     "jest": "^29.7.0",
     "style-loader": "^4.0.0",
     "webpack": "^5.98.0",
-    "webpack-cli": "^6.0.1"
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.1"
   }
 }
